--- a/style.css
+++ b/style.css
@@ -1,38 +1,50 @@
 * {
+  margin: 0;
   padding: 0;
   border: 0;
   box-sizing: border-box;
   border: none;
 }
 
-body {
+.container {
+  height: 100vh;
+  width: 100vw;
   display: flex;
-
 }
-#background-section {
+
+.background-section {
+  width: 40vw;
   background-image: url('background.jpg');
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  width: 30vw;
-  display: flex;
-  flex-direction: column;
-  vertical-align: center;
-  align-items: center;
-  color: white;
+  color: #E5E7EB;
+  position: relative;
 }
 
-#logo-section {
+.logo-section {
   display: flex;
-  align-items: center;
-  vertical-align: center;
   width: 100%;
   background-color: rgb(0, 0, 0, 0.5);
+  position: relative;
+  top: 20vh;
+  align-items: center;
+  justify-content: center;
 }
 
-#logo {
+.logo {
+  height: auto;
   width: 100px;
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  left: 13vw;
+  padding: 20px;
+}
+
+footer, a {
+  text-decoration: none;
+  color: #E5E7EB;
 }
