--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
   border: none;
 }
 
+@font-face {
+  font-family: 'norsebold';
+  src: 
+    url('fonts/Norse/norse-bold-webfont.woff2') format('woff2'),
+    url('fonts/Norse/norse-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .container {
   height: 100vh;
   width: 100vw;
@@ -37,6 +46,11 @@
   width: 100px;
 }
 
+.logo-text {
+  font-family: 'norsebold', sans-serif;
+  font-size: 100px;
+}
+
 footer {
   position: absolute;
   bottom: 0;
@@ -47,4 +61,13 @@ footer {
 footer, a {
   text-decoration: none;
   color: #E5E7EB;
+}
+
+.form-section {
+  width: 60vw;
+}
+
+.disclaimer {
+  height: 34vh;
+  font-family: ;
 }
