--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  border: 0;
   box-sizing: border-box;
-  border: none;
 }
 
 @font-face {
@@ -25,7 +23,7 @@
   width: 40vw;
   background-image: url('background.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
   color: #E5E7EB;
   position: relative;
@@ -67,10 +65,6 @@ footer, a {
   width: 60vw;
 }
 
-.form-section div {
-  padding: 50px;
-}
-
 .disclaimer {
   display: flex;
   flex-direction: column;
@@ -81,6 +75,7 @@ footer, a {
   font-size: 20px;
   font-weight: bold;
   position: relative;
+  padding: 50px;
 }
 .disclaimer > p {
   width: 55ch;
@@ -88,4 +83,30 @@ footer, a {
 
 .expression {
   margin-top: 2rem;
+}
+
+form {
+  padding: 20px 50px;
+  height: 30vh;
+  box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
+}
+label {
+  display: block;
+  color: rgb(58, 58, 58);
+  font-weight: bold;
+}
+
+input {
+  border: 1px solid darkgray;
+  width: 60ch;
+  height: 2em;
+  border-radius: 5px;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.name-form, .personal-info-form, .pwd-creation-form {
+  display: flex;
+  gap: 50px;
+  margin: 20px 0;
 }
